# python-extended-json-schema-validator

./: .gitignore  .isort.cfg  .pre-commit-config-gh-3.6.yaml  .pre-commit-config-gh.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  INSTALL.md  MANIFEST.in  README-extensions.md  README.md  constraints-3.10.txt  constraints-3.11.txt  constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt  constraints.txt  dev-requirements.txt  fairGTrackJsonValidate.py  jsonValidate.py  mypy-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_n_deploy.yml  pre-commit.yml
extended_json_schema_validator/: __init__.py  __main__.py  draw_schemas.py  extend_validator_helpers.py  extensible_validator.py
extended_json_schema_validator/extensions/: abstract_check.py  fk_check.py  index_check.py  join_check.py  pk_check.py  unique_check.py
fairtracks_validator/: __init__.py  downloader.py  extend_validator.py  extensible_validator.py  fairtracks_validator.py  validator.py
fairtracks_validator/extensions/: abstract_check.py  curie_cache.py  curie_search.py  fk_check.py  foreign_property_check.py  ontology_term.py  pk_check.py  unique_check.py
libs/: curie.py  curie_cache.py  curie_search.py  ontology_term.py
test-data/compound_pk/: compound_pk_schema_2.json
test-data/compound_unique/: compound_unique_schema.json
test-data/fk_with_inline/: README.md  ejv_inline.yaml
test-data/fk_with_inline_simple/: README.md  ejv_inline_simple.yaml
test-data/multiple_unique/: multiple_unique_schema.json
test-data/named_pk/: named_pk_schema.json
(+61 files in other folders)
